<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">CarCompanion</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="action_settings">Settings</string>

    <!-- Here are the strings we save to use elsewhere in our app -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome to Car Companion!</string>
    <string name="login">Log in</string>
    <string name="signup">Sign Up</string>
    <string name="use_as_guest">Use As Guest</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="troubleshooting_mode">Troubleshooting Mode</string>
    <string name="car_details">Car Details</string>
    <string name="nav_help_string">Nearby Towing/Mechanics</string>
    <string name="anon_car_details">Please login/sign up to use this feature!</string>
    <string name="nickname">Nickname:</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="choose_password">Choose a Password:</string>
    <string name="retype_password">Retype Password:</string>
    <string name="ymm">Year Make Model:</string>
    <string name="vin">VIN:</string>
    <string name="license_plate">License Plate:</string>
    <string name="license_state">License State:</string>
    <string name="add_a_car">Add a Car</string>
    <string name="logout">Logout</string>
    <string name="init_trouble_title">What sensory experience are you having?</string>
    <string name="back_step">Back Step</string>
    <string name="restart_step">Restart</string>
    <string name="next_step">Next Step</string>
    <string name="diagnosis_title">A possible Diagnosis is...</string>
    <string name="year">Year:</string>
    <string name="make">Make:</string>
    <string name="model">Model:</string>
    <string name="title_activity_help_map">Map</string>
    <string name="back_to_home_text">Back home</string>
    <string name="mechanics">Mechanics</string>
    <string name="autoshops">AutoShops</string>
    <string name="search">Search</string>
    <string name="home_message">The Car Companion is an app designed to help users pinpoint car problems based on certain behaviors, and assist with small repairs or find resources for getting help nearby.</string>


    <string name="view_diagnosis_list">View Diagnosis List</string>
    <string name="having_car_troubles">Having car troubles?</string>
    <string name="let_s_narrow_it_down">Let\'s narrow it down.</string>
    <string name="what_other_symptoms">What other symptoms is your car displaying?</string>
    <string name="the_car_has_a_faulty_starter">The car has a faulty starter</string>

    <string name="click_to_learn_more">Click on any of the options below to learn more.</string>
    <string name="some_possibilities">We found some possibilities...</string>
    <string name="not_sure">Not sure this is the issue? Return to the troubleshooting page to restart or step back and try again.</string>

    <string name="sample_symptom_string">My car is producing a weird smell</string>
    <string name="sample_diagnosis_title">Faulty Ignition Coil</string>
    <string name="troubleshooting_return_button_text">Return to Troubleshooting</string>
    <string name="sample_diagnosis_details">Ignition coils work to transfer ignition voltage so that the spark plugs can fire and the engine can start. Some common signs and symptoms of faulty ignition coils include a hard starting car, a car that frequently misfires, and a car that experiences poor acceleration or loses power. Faulty ignition coils usually don\'t present an immediate safety issue, but it\'s important to have the problem resolved before further engine damage has a chance to occur.t</string>

</resources>