<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WelcomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        >

        <TextView
            android:id="@+id/signup_text"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_centerHorizontal="true"
            android:text="@string/signup"
            android:textSize="45sp"
            android:textAlignment="center"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="50dp"
            android:textColor="@color/charcoal"
            />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fname_textField"
            android:layout_width="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:hint="@string/first_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fname_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lname_textField"
            android:layout_width="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:hint="@string/last_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lname_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_textField"
            android:layout_width="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/choose_password_textField"
            android:layout_width="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:hint="@string/choose_password"
            app:endIconMode="password_toggle"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/choose_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/retype_password_textField"
            android:layout_width="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:hint="@string/retype_password"
            app:endIconMode="password_toggle"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/retype_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            style="@style/WelcomeButtons"
            android:id="@+id/btn_signup"
            android:layout_below="@id/retype_password_textField"
            android:text="@string/signup"
            />

    </LinearLayout>


</RelativeLayout>